@@ -1,0 +1,33 @@
+
+
+The
+<h1>
+CODE JANITOR
+</h1>
+makes sure that new C++ and Scheme code follows the standards.
+<p>
+Writing LilyPond code is an intensive --and sometimes frantic--
+process, and the code that is written in deep-hack mode often is
+unpolished.  The janitor helps by adding the polish, and standardizing
+the code
+<ul>
+ <li>Cleanup code spacing, formatting, indenting, file names, etc.
+
+ <li>Standardize
+   <ul>
+   <li>error messages
+   <li>doc strings
+   <li>texidoc strings
+   <li>function comments
+   <li>debugging code
+   </ul>
+   
+ <li>Submit pot files to the translation robot, and update the
+    translations in CVS.
+
+ <li>Define new coding style standards, where necessary.
+ </ul>
+ 
+<h2>REQUIREMENTS:</h2>
+
+Moderate experience with programming C, Scheme and/or Python
