@@ -1,0 +1,11 @@
+<h1>WRITER of IMPLEMENTATION DOCUMENTATION</h1>
+
+
+<p>
+Developers "scratch their own itch", but they can only do that if they
+have an overview of how the source code is organized.  A
+<p>
+<b>WRITER of IMPLEMENTATION DOCUMENTATION</b>
+<p>
+describes the general design of LilyPond, and helps with writing a
+"HOWTO" document on implementing new features.
