@@ -1,0 +1,15 @@
+<h1>NEWSLETTER EDITOR</h1>
+
+
+The LilyPond community is centered around the lilypond-user mailing
+list, which is becoming rather high-traffic nowadays; even we have
+trouble keeping up with it ourselves.  We think it would be a boon to
+have a
+<p>
+<b>NEWSLETTER EDITOR</b>
+<p>
+who summarizes the hot topics on lilypond-user and lilypond-devel.  We
+was thinking along the lines of the "Kernel traffic" newsletter (<a
+href="http://www.kerneltraffic.org/index.html">http://www.kerneltraffic.org/index.html</a>).
+Hopefully, this will make lurking on the list easier, and help build a
+wider community of LilyPond followers.
